--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,11 @@
     <div class="d-flex justify-content-around">
         <button class="btn btn-primary" ><a href="/addtwo" style="color: white; text-decoration: none;" >Add two!</a></button>
         <button class="btn btn-warning"><a href="/destroy_session" style="color: black; text-decoration: none;">Reset</a></button>
+        <form action="/add/number", method="post">
+            <label for="Add:">Add:</label>
+            <input type="number" name="cantidad">
+            <input type="submit" class="btn btn-warning">
+        </form>
     </div>
-
-
 </body>
 </html>
